...
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/LogoImageView"
        app:layout_constraintStart_toStartOf="@+id/LogoImageView"
        app:layout_constraintTop_toBottomOf="@+id/LogoImageView" />

    <Button
        android:id="@+id/MenuToChessBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/soft_blue"
        android:text="Play Chess"
        app:layout_constraintEnd_toEndOf="@+id/MenuToTKOChessBtn"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logout" />

    <ImageButton
        android:id="@+id/MenuToProfileBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="Takes user to view their profile."
...
